Fix image style for album covers

--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -26,7 +26,7 @@ ul {
 img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 input[type="password"],
